@@ -22,7 +22,7 @@
 		</a>
 	</li>
 	<li>
-		<a href="https://github.com/TrustPayments/woocommerce-subscription/releases/tag/1.0.13/">
+		<a href="https://github.com/TrustPayments/woocommerce-subscription/releases/tag/1.0.14/">
 			Source
 		</a>
 	</li>
